--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chordinate/chordpro-parser",
+  "name": "@chordinate/chordpro-js",
   "version": "0.1.0",
   "description": "An extendable ChordPro parser",
   "author": {
@@ -10,10 +10,10 @@
   "types": "dist/main",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chordinate-js/chordpro-parser"
+    "url": "https://github.com/chordinate-js/chordpro-js"
   },
   "bugs": {
-    "url": "https://github.com/chordinate-js/chordpro-parser/issues"
+    "url": "https://github.com/chordinate-js/chordpro-js/issues"
   },
   "keywords": [
     "chordpro",
